[project]
name = "slide-to-video"
version = "0.1.0"
description = "Generate video from slide and script."
authors = [
    { name = "Yongheng Chen", email = "changochen1@gmail.com" }
]
dependencies = [
    "pydub>=0.25.1",
    "tts>=0.22.0",
    "ruff>=0.3.7",
    "requests>=2.32.2",
    "pymupdf>=1.24.4",
    "ffmpeg-python>=0.2.0",
    "python-docx>=1.1.2",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
slide-to-video = 'script:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstrument>=4.6.2",
    "pyright>=1.1.366",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slide_to_video", "src/script"]
